# SwissBook

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.sh
.kiro/specs/yt-bulk-cc-logging-fixes/: design.md  requirements.md  tasks.md
.repomix/: bundles.json
scripts/: setup.sh  test  test-sd  test-ybc
