# SwissBook/pyproject.toml

[project]
name = "swissbook-workspace"
version = "0.1.0"
requires-python = ">=3.12"

# Centralize shared development dependencies for all packages in the workspace.
# When you run `setup.sh --dev`, uv will install these.
[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pytest>=8.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=6.2",
  "pytest-xdist>=3.7",
  "pytest-playwright>=0.5",
  "hypothesis>=6.99",
  "pandocfilters ; platform_system != 'Windows'",
  "docker>=7.0"
]

# Define the workspace members for uv.
# This tells uv where to find the individual packages.
[tool.uv.workspace]
members = [
  "packages/site_downloader",
  "packages/yt_bulk_cc"
]

# ========== TESTS ==========

# ---------- PyTest ----------
[tool.pytest.ini_options]
# Automatically discover tests in these paths
testpaths = ["packages/"]
# Automatically apply asyncio marker for pytest-asyncio
asyncio_mode = "auto"
markers = [
    "serial: tests that must not run in parallel (one container at a time)",
    "e2e: end to end tests that require external dependencies",
]

# ---------- Coverage ----------
[tool.coverage.run]
# Measure coverage against all source code within the packages directory
source = ["packages"]
# Omit test files and conftest from the coverage report
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
# Optional: Fail the run if total coverage is below a certain threshold
# fail_under = 90
# Show lines that are missing from coverage in the terminal report
show_missing = true